# flutter_brotli

./: README.md  pubspec.yaml
android/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  libnative_add.dylib  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/linkkader/flutter_brotli/flutter_brotli/: FlutterBrotliPlugin.kt
br/tools/: brotli.c
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  (+1 more)
ios/: flutter_brotli.podspec
ios/Classes/: FlutterBrotliPlugin.h  FlutterBrotliPlugin.m  SwiftFlutterBrotliPlugin.swift
lib/: flutter_brotli.dart  flutter_brotli_method_channel.dart  flutter_brotli_platform_interface.dart  generated_bindings.dart
linux/: CMakeLists.txt  flutter_brotli_plugin.cc
macos/: flutter_brotli.podspec
macos/Classes/: FlutterBrotliPlugin.swift
test/: flutter_brotli_method_channel_test.dart  flutter_brotli_test.dart
windows/: CMakeLists.txt  flutter_brotli_plugin.cpp  flutter_brotli_plugin.h  flutter_brotli_plugin_c_api.cpp
(+7 files in other folders)
